@@ -179,7 +179,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkVBox" id="vbox18">
+	    <widget class="GtkVBox" id="vbox_filter_details">
 	      <property name="visible">True</property>
 	      <property name="homogeneous">False</property>
 	      <property name="spacing">18</property>
