@@ -2,6 +2,7 @@
  - proxy can be configured with the gui now
  - updated japanese translation (thanks to Daisuke SUZUKI)
  - new preferences dialog layout (thanks Sebastian Heinlein)
+ - new filter dialog layout  (thanks Sebastian Heinlein)
 
 0.44
  - two alternative main layouts can be choosen now
